src/scss/partials/canoeing/_canoeing.scss
.canoeing{
    padding-bottom: 50px;

    &-title{
        font-size: 40px;
        margin-bottom: 25px;
        font-family: $paytoneOne-font-family;
        color: $akka-dark-orange;
        text-align: center;
        
        @include media-breakpoint-down(md){
            font-size: 32px;
            margin-bottom: 0px;
        }
    }

    &-routes{
        padding-top: 25px;

        &-single{
            font-family: $raleway-font-family;

            @include media-breakpoint-down(sm){
                margin-bottom: 25px;

                &:last-child{
                    margin-bottom: 0px;
                }
            }
        }

        &-content{
            border: solid 1px $akka-dark-orange;
            text-align: center;
        }

        &-title{
            font-family: $raleway-font-family !important;
            margin: 15px 0px;

            @include media-breakpoint-down(md){
                font-size: 20px;
            }

            @include media-breakpoint-down(sm){
                font-size: 24px;
            }
        }

        &-desc{
            padding: 0px 10px;

            @include media-breakpoint-down(md){
                font-size: 16px;
            }
        }

        &-btn{
            display: block;
            width: fit-content;
            margin: 25px auto;

            border: solid 1px $akka-dark-orange;
            &:hover{
                background: $akka-dark-orange;
                color: $akka-white !important;
            }
        }
    }

}

